# delfi

./: Cargo.toml  README.md
crates/delfi-derive/: Cargo.toml
crates/delfi-macros/: Cargo.toml  LICENSE.md
crates/delfi-macros/src/: lib.rs
crates/delfi-test/: Cargo.toml
crates/delfi-test/src/: main.rs
data/: test.csv
resources/data/examples/: basic.csv  datapoints.csv  labels.csv  ndarray.csv  save-short.csv
resources/data/tests/dataset/: columns-arrays.csv  macro-vectors.csv
resources/data/tests/macros/: dataset-named.csv  dataset-unnamed.csv
resources/data/tests/ndarray/: columns-arrays.csv
src/: data.rs  datapoint.rs  dataset.rs  lib.rs
test/: dataset.rs
tests/: datapoint.rs  dataset.rs  macros.rs  ndarray.rs  this_is_a_test.rs
