[package]
name = "delfi"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "Conveniently writing data to csv-files"
repository = "https://github.com/skogseth/delfi"
keywords = ["csv", "data"]

[dependencies]
csv = "1.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
ndarray = "0.15"

