[package]
name = "delfi"
version = "0.0.5"
edition = "2021"
license = "MIT"
description = "Conveniently writing data to csv-files"
repository = "https://github.com/skogseth/delfi"
keywords = ["csv", "data"]

[dependencies]
csv = "1.1"
delfi-derive = { path = "./crates/delfi-derive" }

[dev-dependencies]
ndarray = "0.15"

