[package]
name = "delfi-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delfi = { path = "../../" }
quote = "*"
syn = { version = "1.0", features = ["extra-traits"] }

[lib]
proc-macro = true
